force-app/main/default/objects/csv_GCS_ANZ_POC__dlm/csv_GCS_ANZ_POC__dlm.object-meta.xml
<CustomObject>
    <label>*.csv GCS ANZ POC</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>*.csv GCS ANZ POC</labelOverride>
        <masterLabel>*.csv GCS ANZ POC</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataModelAttributes>
</CustomObject>