force-app/main/default/objects/csv_GCS_ANZ_POC__dlm/fields/CustIdAndDate__c.field-meta.xml
<CustomField>
    <fullName>CustIdAndDate__c</fullName>
    <label>CustIdAndDate</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CustIdAndDate</labelOverride>
        <masterLabel>CustIdAndDate</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>