force-app/main/default/objects/csv_GCS_ANZ_POC__dlm/fields/Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Date__c</fullName>
    <label>Interaction Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Interaction Date</labelOverride>
        <masterLabel>Interaction Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>