force-app/main/default/objects/csv_GCS_ANZ_POC__dlm/fields/KQ_CustIdAndDate__c.field-meta.xml
<CustomField>
    <fullName>KQ_CustIdAndDate__c</fullName>
    <label>Key Qualifier CustIdAndDate</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier CustIdAndDate</labelOverride>
        <masterLabel>Key Qualifier CustIdAndDate</masterLabel>
        <refAttrDeveloperName>KQ_CustIdAndDate</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>